# ROS2-Point-Cloud-Demo

./: .gitignore  LICENSE  README.md  Visualizing_PCDs_in_RViz2.md  package.xml  setup.cfg  setup.py
config/: config.rviz
launch/: pcd_publisher_demo.launch.py  pcd_pubsub_demo.launch.py
pcd_demo/pcd_publisher/: pcd_publisher_node.py
pcd_demo/pcd_subscriber/: pcd_subscriber_node.py
pcd_publisher/: pcd_publisher_node.py
resource/: teapot.ply
