<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pcd_demo</name>
  <version>0.0.1</version>
  <description>Demo on how to utilize the sensor_msgs::msg::PointCloud2 message type in ROS2, RViz2 and numpy.</description>
  <maintainer email="sebastian.grans@ntnu.no">Sebastian Grans</maintainer>
  <license>MIT License</license>


  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
